@@ -1,5 +1,8 @@
 2008-04-17  Doug Evans  <dje@google.com>
 
+	* buildsym.c (watch_main_source_file_lossage): New fn.
+	(end_symtab): Call it.
+
 	* source.c (find_and_open_source): Add some comments clarifying
 	handling of FULLNAME argument.	Make static.  Remove pointless
 	xstrdup/xfree.
